--- a/gestion.css
+++ b/gestion.css
@@ -37,7 +37,7 @@ header nav /* la navigation de l'en-tete*/
 .block_navigation /* le bloc div du menu*/
 {
     border: solid black 0px;
-    margin-left: 355px;
+    margin-left: 354px;
     font-size: 14px;
 }
 .navigation /* le bloc des puces non numérotées */
@@ -74,7 +74,7 @@ header nav /* la navigation de l'en-tete*/
     right: 50px;
     width: 0;
     height: 0;
-    left: 63.9%;
+    left: 63.8%;
     border-left: 6px solid transparent;
     border-bottom: 6px solid transparent;
     border-right: 6px solid transparent;
@@ -124,7 +124,7 @@ header nav /* la navigation de l'en-tete*/
     right: 50px;
     width: 0;
     height: 0;
-    left: 78.05%;
+    left: 78%;
     border-left: 6px solid transparent;
     border-bottom: 6px solid transparent;
     border-right: 6px solid transparent;
@@ -164,7 +164,7 @@ nav li:hover ul /* apparition en bloc de la liste des liens transactions et even
 {
     text-decoration: none;
     font-weight: bold;
-    color: orange;
+    color: white;
 }
 .evene /* apparence du lien evenement */
 {
@@ -174,7 +174,7 @@ nav li:hover ul /* apparition en bloc de la liste des liens transactions et even
 }
 .gestion /* apparence du lien gestion */
 {
-    color: white;
+    color: orange;
     text-decoration: none;
     font-weight: bold;
 }
@@ -184,98 +184,41 @@ nav li:hover ul /* apparition en bloc de la liste des liens transactions et even
 }
 /* HEADER END */
 
-/* SECTION START */
-.ajout /* grand titre du formulaire*/
+/*SECTION START*/
+table /* le tableau au complet */
 {
-    margin-left: 20%;
+    width: 200px;
+    height: 50px;
+    text-align: center;
+    border-collapse: collapse;
     margin-top: 5%;
-    color: #df3f3f;
-    font-weight: bold;
+    margin-left: 5%;
+    background-color: white;
+    box-shadow: 0px 0px 10px #d8d8d8;
+
 }
-form /* le formulaire au complet*/
+th, td /* Les cellules du tableau */
 {
-    width: 700px;
-    margin-left: 20%;
+    border: solid 1px #ddd;
+    padding: 4px;
 }
-fieldset /* le cadran du formulaire*/
+th /* l'en-tete du tableau */
 {
-    padding: 20px 20px 20px 20px;
-    margin-bottom: 15px;
-    border: solid #df3f3f 1px;
+    color: #df3f3d;
+    font-size: 18px;
+    background-color: #f2f2f2;
 }
-legend /* la legende du formulaire */
+.tot /* second en-tete */
 {
-    color: #df3f3f;
-    font-weight: bold;
+    padding: 10px;
 }
-label /* titre du champs des formulaires */
-{
-    margin: 6px;
-}
-fieldset input /* champs se retrouvant dans le cadran du formulaire */
-{
-    background-color: #fff3f3;
-    padding: 3px;
-    border: solid #f5c5f5 1px;
-    width: 250px;
-    border-radius: 5px;
-    box-shadow: 1px 2px #c0c0c0 inset;
-}
-.matvente
-{
-    margin-left: 92px;
-}
-.date /* champ de la date de vente*/
-{
-    margin-left: 100px;
-}
-.quantite /* champ de la quantite vendue */
-{
-    margin-left: 82px;
-}
-.montant /* champ du montant total */
-{
-    margin-left: 105px;
-}
-fieldset select /* champs de selection*/
-{
-    background-color: #fff3f3;
-    padding: 3px;
-    border: solid #f5c5f5 1px;
-    width: 250px;
-    border-radius: 5px;
-    box-shadow: 1px 2px #c0c0c0 inset;
-}
-#listproduit /* champ de produit */
-{
-    margin-left: 150px;
-}
-#listclient /* champ de client */
-{
-    margin-left: 160px;
-}
-#listmode /* champ de mode de paiement */
-{
-    margin-left: 67px;
-}
-input[type=submit], input[type=reset] /* bouton d'ajout et d'annulation */
-{
-    background-color: #fff3f3;
-    padding: 3px;
-    margin-left: 5px;
-    border: solid #f5c5f5 1px;
-    border-radius: 5px;
-    box-shadow: 1px 1px 1px #d83f3d;
-    width: 100px;
-    cursor: pointer;
-}
-/* SECTION END */
+/*SECTION END*/
 
 /* FOOTER START */
 .footer /* Le pied de page */
 {
     border: solid black 0px;
-    margin-top: 130px;
+    margin-top: 300px;
     margin-bottom: -2%;
     margin-left: -8px;
     margin-right: -8px;
