--- a/tab_ven.css
+++ b/tab_ven.css
@@ -37,7 +37,7 @@ header nav /* la navigation de l'en-tete*/
 .block_navigation /* le bloc div du menu*/
 {
     border: solid black 0px;
-    margin-left: 355px;
+    margin-left: 354px;
     font-size: 14px;
 }
 .navigation /* le bloc des puces non numérotées */
@@ -74,7 +74,7 @@ header nav /* la navigation de l'en-tete*/
     right: 50px;
     width: 0;
     height: 0;
-    left: 63.9%;
+    left: 63.8%;
     border-left: 6px solid transparent;
     border-bottom: 6px solid transparent;
     border-right: 6px solid transparent;
@@ -124,7 +124,7 @@ header nav /* la navigation de l'en-tete*/
     right: 50px;
     width: 0;
     height: 0;
-    left: 78.05%;
+    left: 78%;
     border-left: 6px solid transparent;
     border-bottom: 6px solid transparent;
     border-right: 6px solid transparent;
@@ -164,13 +164,13 @@ nav li:hover ul /* apparition en bloc de la liste des liens transactions et even
 {
     text-decoration: none;
     font-weight: bold;
-    color: orange;
+    color: white;
 }
 .evene /* apparence du lien evenement */
 {
     text-decoration: none;
     font-weight: bold;
-    color: white;
+    color: orange;
 }
 .gestion /* apparence du lien gestion */
 {
@@ -185,89 +185,49 @@ nav li:hover ul /* apparition en bloc de la liste des liens transactions et even
 /* HEADER END */
 
 /* SECTION START */
-.ajout /* grand titre du formulaire*/
+h1 /* titre du corps de page */
 {
-    margin-left: 20%;
+    margin-left: 5%;
     margin-top: 5%;
-    color: #df3f3f;
-    font-weight: bold;
+    color: crimson;
 }
-form /* le formulaire au complet*/
+table /* Le tableau au complet */
 {
-    width: 700px;
-    margin-left: 20%;
+    width: 1200px;
+    margin-left: 5%;
+    text-align: center;
+    background-color: #fff;
+    border: solid black 0px;
+    margin-top: 3%;
+    border-collapse: collapse;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
-fieldset /* le cadran du formulaire*/
+th, td /* designation des cellules d'entete du tableau ainsi que leur contenu */
 {
-    padding: 20px 20px 20px 20px;
-    margin-bottom: 15px;
-    border: solid #df3f3f 1px;
+    border: solid 1px #ddd;
+    padding: 3px;
 }
-legend /* la legende du formulaire */
+th /* en-tete du tableau */
 {
-    color: #df3f3f;
-    font-weight: bold;
+    background-color: #f2f2f2;
+    color: #333;
 }
-label /* titre du champs des formulaires */
+tbody a /* lien pour modifier er supprimer */
 {
-    margin: 6px;
+    text-decoration: none;
+    color: black;
 }
-fieldset input /* champs se retrouvant dans le cadran du formulaire */
+.btn1, .btn2 /* button des liens de modifications et suppression */
 {
+    width: 80px;
     background-color: #fff3f3;
     padding: 3px;
-    border: solid #f5c5f5 1px;
-    width: 250px;
     border-radius: 5px;
-    box-shadow: 1px 2px #c0c0c0 inset;
-}
-.matvente
-{
-    margin-left: 92px;
-}
-.date /* champ de la date de vente*/
-{
-    margin-left: 100px;
-}
-.quantite /* champ de la quantite vendue */
-{
-    margin-left: 82px;
-}
-.montant /* champ du montant total */
-{
-    margin-left: 105px;
-}
-fieldset select /* champs de selection*/
-{
-    background-color: #fff3f3;
-    padding: 3px;
-    border: solid #f5c5f5 1px;
-    width: 250px;
-    border-radius: 5px;
-    box-shadow: 1px 2px #c0c0c0 inset;
-}
-#listproduit /* champ de produit */
-{
-    margin-left: 150px;
-}
-#listclient /* champ de client */
-{
-    margin-left: 160px;
-}
-#listmode /* champ de mode de paiement */
-{
-    margin-left: 67px;
-}
-input[type=submit], input[type=reset] /* bouton d'ajout et d'annulation */
-{
-    background-color: #fff3f3;
-    padding: 3px;
-    margin-left: 5px;
-    border: solid #f5c5f5 1px;
-    border-radius: 5px;
-    box-shadow: 1px 1px 1px #d83f3d;
-    width: 100px;
     cursor: pointer;
+}
+.btn1 :hover , .btn2 :hover /* au survol */
+{
+    color: #007bff;
 }
 /* SECTION END */
 
@@ -275,7 +235,7 @@ input[type=submit], input[type=reset] /* bouton d'ajout et d'annulation */
 .footer /* Le pied de page */
 {
     border: solid black 0px;
-    margin-top: 130px;
+    margin-top: 462px;
     margin-bottom: -2%;
     margin-left: -8px;
     margin-right: -8px;
