--- a/css/style.css
+++ b/css/style.css
@@ -70,11 +70,11 @@ header nav /* la navigation de l'en-tete*/
 .arrow-down /* la flèche du lien transaction*/
 {
     position: absolute;
-    top: 47px;
+    top: 46.5px;
     right: 50px;
     width: 0;
     height: 0;
-    left: 63.8%;
+    left: 64.6%;
     border-left: 6px solid transparent;
     border-bottom: 6px solid transparent;
     border-right: 6px solid transparent;
@@ -120,11 +120,11 @@ header nav /* la navigation de l'en-tete*/
 #arrow-down /* la fleche du lien evenement */
 {
     position: absolute;
-    top: 47px;
+    top: 46.5px;
     right: 50px;
     width: 0;
     height: 0;
-    left: 77.8%;
+    left: 78.7%;
     border-left: 6px solid transparent;
     border-bottom: 6px solid transparent;
     border-right: 6px solid transparent;
@@ -184,11 +184,60 @@ nav li:hover ul /* apparition en bloc de la liste des liens transactions et even
 }
 /* HEADER END */
 
+/*SECTION START*/
+h1
+{
+    text-align: center;
+    color: #333;
+    margin-top: 14%;
+}
+section p
+{
+    text-align: center;
+    border: solid black 0px;
+}
+section a
+{
+    text-decoration: none;
+    margin-left: 2%;
+    border: solid black 0px;
+    padding: 8px;
+    background-color: firebrick;
+    color: white;
+    border-radius: 10px;
+}
+section
+{
+    display: inline-flex;
+    flex-wrap: wrap;
+}
+.presentation
+{
+    border: solid black 0px;
+    margin-top: 6%;
+    margin-left: 15px;
+}
+.bloc_image
+{
+    border: solid black 0px;
+    height: 360px;
+    width: 480px;
+    background-repeat: no-repeat;
+    margin-top: 6%;
+    margin-left: 40px;
+}
+span
+{
+    color: crimson;
+    font-weight: bold;
+}
+/*SECTION END*/
+
 /* FOOTER START */
 .footer /* Le pied de page */
 {
     border: solid black 0px;
-    margin-top: 462px;
+    margin-top: 145px;
     margin-bottom: -2%;
     margin-left: -8px;
     margin-right: -8px;
