--- a/css/form_ven.css
+++ b/css/form_ven.css
@@ -5,6 +5,7 @@ header /* l'en-tete */
     border: solid black 0px;
     background-color: #333;
     width: 100%;
+    position: fixed;
     margin-top: -8px;
     padding-top: 25px;
     padding-bottom: 25px;
