--- a/css/login.css
+++ b/css/login.css
@@ -9,7 +9,7 @@ body
 input
 {
     width: 100%;
-    height: 25px;
+    height: 30px;
     border-radius: 5px;
     border: solid #f5c5f5 1px;
     padding: 3px;
@@ -22,16 +22,15 @@ input
     display: flex;
     flex-wrap: wrap;
     width: 75%;
-    margin: auto;
-    padding-left: 10%;
-    margin-top: 8%;
+    /* padding-left: 10%; */
+    /* margin-top: 8%; */
 }
 .image_achat
 {
     border: solid black 0px;
-    width: 40%;
-    background-size: cover;
-    background-repeat: no-repeat;
+    /* width: 50%; */
+    /* background-size: cover;
+    background-repeat: no-repeat; */
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
 }
@@ -39,7 +38,6 @@ input
 {
     border: solid black 0px;
     padding: 0px 40px;
-    width: 40%;
     background-color: beige;
     border-bottom-right-radius: 5px;
     border-top-right-radius: 5px;
@@ -61,13 +59,14 @@ fieldset
 button
 {
     width: 120px;
-    height: 30px;
+    /* height: 30px; */
     border-radius: 5px;
     border: solid #f5c5f5 1px;
-    padding: 3px;
-    margin-left: 35%;
-    background-color: #fff3f3;
-    box-shadow: 2px 2px #c0c0c0 inset;
+    /* padding: 3px; */
+    /* margin-left: 35%;
+    margin-bottom: 20px; */
+    /* background-color: #fff3f3;
+    box-shadow: 2px 2px #c0c0c0 inset; */
     color: #df3f3f;
     cursor: pointer;
 }
@@ -77,4 +76,20 @@ button:hover
     color: white;
     background-color: #df3f3f;
     box-shadow: 0px 0px inset;
+}
+@media screen and (max-width :576px) {
+    #deuxblocs
+    {
+        display: block;
+        margin-bottom: 8%;
+    }
+    .first
+    {
+        margin: auto;
+    }
+    .infos
+    {
+        margin: auto;
+        padding-bottom: 10%;
+    }
 }
